# irobot

src/irobot_description/: CMakeLists.txt  package.xml
src/irobot_description/src/: pid_diff_drive.cc  pid_diff_drive1.cc
src/irobot_description/urdf/: irobot.gazebo  irobot.xacro  macros.xacro
src/irobot_gazebo/: CMakeLists.txt  package.xml
src/irobot_gazebo/launch/: irobot_world.launch
src/irobot_gazebo/worlds/: irobot.world
src/irobot_plugin/: CMakeLists.txt  package.xml
src/irobot_plugin/include/irobot_plugin/: diff_drive_gazebo_ros.h  diff_drive_pid.h  pid_diff_drive.h  test_plugin.h
src/irobot_plugin/src/: diff_drive_gazebo_ros.cpp  diff_drive_pid.cpp  gazebo_ros_utils.cpp  pid_diff_drive.cpp  test_plugin.cpp
